# web-spec

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  test.feature  test_run_command.feature  test_valid.feature
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/: CLI.md  CLI_COMMANDS.md  GETTING_STARTED.md
examples/: GHERKIN_ADVANCED.md  GHERKIN_RUNNER.md  STEP_DEFINITIONS.md  advanced_navigation.feature  basic.rs  chromiumoxide.rs  data_extraction.feature  ecommerce.feature  gherkin_runner.rs  hacker_news.feature  hacker_news_titles.rs  social_media.feature  test_webdriver.rs
examples/features/: ecommerce.feature  form-interaction.feature  interactions.feature  navigation.feature  scrolling.feature  verification.feature  waiting.feature
features/: alerts.feature  batch.feature  cli_commands.feature  comparison.feature  debugging.feature  webhooks.feature
src/: automation.rs  browser.rs  browser_backend.rs  converter.rs  error.rs  lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs  output.rs
src/discovery/: catalog.rs  mod.rs  schema.rs  search.rs
src/execution/: alerts.rs  batch.rs  comparison.rs  comparison_output.rs  debug.rs  html_output.rs  json_output.rs  mod.rs  profiling.rs  result.rs  tap_output.rs  text_output.rs  webhook.rs  yaml_output.rs
src/validation/: errors.rs  feature.rs  mod.rs  step.rs
tests/: GENERIC_STEPS.md  README.md  bdd_comprehensive.rs  bdd_integration.rs  cli_comparison_features.rs  cli_edge_cases.rs  cli_integration.rs  generic_steps.rs  hacker_news_bdd.rs
tests/features/: basic-browser.feature  browser-navigation.feature  hacker-news-extraction.feature
