[package]
name = "web-spec"
version = "0.1.0"
edition = "2024"
description = "Flexible and Extensible Gherkin Feature Runner for browser automation"
authors = ["web-spec Contributors"]
repository = "https://github.com/anomalyco/web-spec"
homepage = "https://web-spec.ai"
license = "MIT OR Apache-2.0"

[dependencies]
thirtyfour = "0.36.1"
html2md = "0.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2.0.18"
url = "2"
regex = "1.12.2"
chromiumoxide = { version = "0.8.0", optional = true }
futures-util = { version = "0.3.31", optional = true }
serde_json = "1.0.149"
clap = { version = "4.5.56", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
async-trait = "0.1"
http = "1.0"
rayon = "1.10"
walkdir = "2"
num_cpus = "1"

[features]
default = ["chromiumoxide-backend"]
webdriver = []
chromiumoxide-backend = ["chromiumoxide", "futures-util"]

[dev-dependencies]
cucumber = "0.22.1"
tempfile = "3"

[[bin]]
name = "web-spec"
path = "src/main.rs"

[[test]]
name = "bdd_integration"
path = "tests/bdd_integration.rs"

[[test]]
name = "hacker_news_bdd"
path = "tests/hacker_news_bdd.rs"

[[test]]
name = "generic_steps"
path = "tests/generic_steps.rs"

[[test]]
name = "cli_integration"
path = "tests/cli_integration.rs"

[[test]]
name = "cli_edge_cases"
path = "tests/cli_edge_cases.rs"

  [[test]]
  name = "cli_workflows"
  path = "tests/cli_comparison_features.rs"

  [[test]]
  name = "bdd_comprehensive"
  path = "tests/bdd_comprehensive.rs"
